# pdftools

./: .gitignore  pyproject.toml
pdftools/: _type.py  cli.py
tests/: test_type.py
