[tool.poetry]
name = "pdftools"
version = "0.3.0"
description = ""
authors = ["Vincent Lo <vincentlo@greenaitech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9"
click = "^8.1.7"
pypdf = "^5.0.1"
pillow = "^11.0.0"
img2pdf = "^0.5.1"

[tool.poetry.scripts]
pdftools = "pdftools.cli:cli"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
